# news-site

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
comments/: admin.py  forms.py  models.py  views.py
comments/migrations/: 0001_initial.py
comments/templates/: comments.html  new_comment.html
news_project/: celery.py  settings.py  urls.py
posts/: admin.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_personalblog.py  0003_auto_20200315_1231.py
posts/static/css/: main.css
posts/static/js/: main.js
posts/templates/: base.html  blog.html  feed.html  main.html  navbar.html  new_post.html  pagination.html  post_create.html  post_detail.html  user_detail.html  user_list.html
users/: admin.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_customuser.py
users/templates/: activate_account.html
users/templates/registration/: login.html  signup.html
