[tool.poetry]
name = "news_site"
version = "0.1.0"
description = ""
authors = ["Anastasia Perevalova <perev4n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-ckeditor = "^5.8"
django-bootstrap4 = "^1.0"
celery = "^4.3"
redis = "^4.4"
Pillow = "^6.2"
django-registration-redux = "^2.6"
requests = "^2.22"
django-extensions = "^2.2"
django-braces = "^1.13"
django-crispy-forms = "^1.8"
python-decouple = "^3.3"
python-slugify = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
